# Windows-Desktop-Automation-Framework

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py  main.py
app/api/: routes.py
app/automation/: executor.py  registry.py  runner.py  screenshot.py  steps.py
app/core/: config.py  exceptions.py  json_logger.py  logger.py
app/db/: database.py  models.py
app/schemas/: task.py
app/services/: observability.py  state_machine.py  task_service.py
app/ui/: __init__.py  dashboard.py
app/workers/: background.py
cli/: cli.py
tasks/: calc_example.json  notepad_example.json  paint_doodle_example.json
tests/: test_executor.py  test_task_service.py
